# PowerChat

./: README.md  pyproject.toml  requirements.txt
.history/: .env_20220303172031
.history/src/: main_20220303123832.py  main_20220303172107.py  main_20220303172129.py  main_20220303172228.py  main_20220303172319.py  main_20220303172437.py  main_20220303173519.py  main_20220303173601.py  main_20220303173703.py  main_20220303174122.py  main_20220303174225.py  main_20220303174350.py  main_20220303174610.py  main_20220303174924.py  main_20220303175153.py  main_20220303175414.py  main_20220303175504.py  main_20220303180131.py  main_20220303180229.py
src/: main.py
